Add CSS and overlap
Testing overlap text with the CSS provided as template in order to see
what I want to keep versus take out

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ featured-image_path:
 <!DOCTYPE html>
 
 <head>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
 <body>
@@ -37,14 +38,21 @@ featured-image_path:
         <p>vagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vagina </p>
       </div>
 
-      <div class="image-tall">
+      <div class="overlap-text">
+        <blockquote>EXCERPT OR PHOTO CAPTION</blockquote>
+      </div>
+
+      <div class="media-tall right">
         <img src="http://www.placecage.com/c/500/800"> <!-- large vertical image to start post' -->
       </div>
     </div>
 
     <div class="chunk">
-      <div class="image-wide left">
+      <div class="media-wide left parent">
         <img src="http://www.placecage.com/c/700/450"><!-- horizontal image on left side of screen -->
+        <div class="overlap">
+          <blockquote>EXCERPT OR PHOTO CAPTION</blockquote>
+        </div>
       </div>
 
       <div class="content right">
@@ -53,17 +61,20 @@ featured-image_path:
     </div>
 
     <div class="chunk">
-      <div class="image-wide right">
-          <img src="http://www.placecage.com/c/700/450">
+      <div class="content left">
+        <p>vagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina</p>
       </div>
 
-      <div class="content">
-        <p>vagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina</p>
+      <div class="media-wide right">
+          <img src="http://www.placecage.com/c/700/450">
+          <div class="overlap">
+            <blockquote>EXCERPT OR PHOTO CAPTION</blockquote>
+          </div>
       </div>
     </div>
 
     <div class="chunk">
-      <div class="image-wide left">
+      <div class="media-wide left">
         <img src="http://www.placecage.com/c/700/450">
       </div>
 
