Redo, add javascript
Basically rebuilt from scratch; added in java; still not complete site
but from now on want version I can revert to if I break something

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ featured-image_path:
         <p>vagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vaginavagina vagina vagina vagina vagina </p>
       </div>
 
-      <div class="overlap-text">
+      <div class="overlap">
         <blockquote>EXCERPT OR PHOTO CAPTION</blockquote>
       </div>
 
